prima slides con licenza e nomi

--- a/intro.tex
+++ b/intro.tex
@@ -4,13 +4,31 @@
 
 \begin{document}
   
-\begin{frame}{Free & Open Source Software}
+\begin{frame}{Free and Open Source Software}
 
+\textbf{Andrea Bellandi} \\
+\textbf{Alessandro Campagni} \\
+
+\hfill Potete trovare i sorgenti di queste \emph{slides} qui:\\
+\hfill https://github.com/sciamp/foss\_intro
+
+\vfill
 \includegraphics[width=0.05\textwidth]{img/cc.png}
 \includegraphics[width=0.05\textwidth]{img/by.png}
 \includegraphics[width=0.05\textwidth]{img/sa.png}
 
 This work is licensed under the Creative Commons Attribution-ShareAlike 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/3.0/.
 \end{frame}
+
+
+\begin{frame}{Free and Open Source Software}
+
+  \begin{itemize}
+    \item Cosa \`e il FOSS
+    \item Perch\'e il FOSS
+  \end{itemize}
+
+\end{frame}
+
 
 \end{document}
