prima slide con \titlepage

--- a/intro.tex
+++ b/intro.tex
@@ -1,16 +1,15 @@
 \documentclass{beamer}
+\mode<presentation>
+\title{Free and Open Source Software}
+\author{Andrea Bellandi, Alessandro Campagni}
 \usetheme{CambridgeUS}
 
 
 \begin{document}
-  
-\begin{frame}{Free and Open Source Software}
 
-\textbf{Andrea Bellandi} \\
-\textbf{Alessandro Campagni} \\
 
-\hfill Potete trovare i sorgenti di queste \emph{slides} qui:\\
-\hfill https://github.com/sciamp/foss\_intro
+\begin{frame}
+  \titlepage
 
 \vfill
 \includegraphics[width=0.05\textwidth]{img/cc.png}
@@ -19,7 +18,6 @@
 
 This work is licensed under the Creative Commons Attribution-ShareAlike 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/3.0/.
 \end{frame}
-
 
 \begin{frame}{Free and Open Source Software}
 
@@ -30,5 +28,14 @@ This work is licensed under the Creative Commons Attribution-ShareAlike 3.0 Unpo
 
 \end{frame}
 
+\begin{frame}{Free and Open Source Software}
+
+  \begin{itemize}
+    \item Cosa \`e il FOSS
+      
+    \item Perch\'e il FOSS
+  \end{itemize}
+
+\end{frame}
 
 \end{document}
