--- a/intro.tex
+++ b/intro.tex
@@ -16,7 +16,10 @@
 \includegraphics[width=0.05\textwidth]{img/by.png}
 \includegraphics[width=0.05\textwidth]{img/sa.png}
 
-This work is licensed under the Creative Commons Attribution-ShareAlike 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/3.0/.
+This work is licensed under the Creative Commons
+Attribution-ShareAlike 3.0 Unported License. 
+To view a copy of this license, visit 
+http://creativecommons.org/licenses/by-sa/3.0/.
 \end{frame}
 
 \begin{frame}
