--- a/intro.tex
+++ b/intro.tex
@@ -86,7 +86,7 @@ c7 3c 2a 3c 2a 2b 2a 5c 3c 28 5c 2a 2b 2a 5c 3c\\
 #include <stdio.h>
 #include <stdlib.h>
 
-int main(int arcg, char *argv[])
+int main(int argc, char *argv[])
 {
   printf("Hello World!");
   return EXIT_SUCCESS;
