--- a/intro.tex
+++ b/intro.tex
@@ -37,8 +37,8 @@ http://creativecommons.org/licenses/by-sa/3.0/.
 
   \begin{itemize}
     \item<1-> Computer, Software e schermate blu
-    \item<2-> Un po' di storia
-    \item<3-> Il codice sorgente
+    %% \item<2-> Un po' di storia
+    \item<2-> Il codice sorgente
   \end{itemize}
 
 \end{frame}
@@ -100,9 +100,9 @@ int main(int argc, char *argv[])
 
   \begin{itemize}
     \item Computer, Software e schermate blu
-    \item Un po' di storia
+    %% \item Un po' di storia %% non ricordo cosa diceva il Bella
     \item Il codice sorgente
-    \item Huston, abbiamo un problema
+    \item Uh, Houston, we've had a problem.
   \end{itemize}
 
 \end{frame}
@@ -175,31 +175,31 @@ int main(int argc, char *argv[])
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Ma allora conviene?}
+%% \begin{frame}
+%%   \frametitle{Ma allora conviene?}
 
 
-  \begin{block}{I motivi della convenienza}
+%%   \begin{block}{I motivi della convenienza}
     
-    \begin{itemize}
-      \item Le quattro libert\`a
-      \item Le quattro libert\`a
-      \item Le quattro libert\`a
-      \item Veloce risoluzione bug
-      \item Indipendenza da chi produce software
-      \item Facile interscambio di informazioni e dati fra le
-        varie parti
-      \item Adattare al meglio il programma alle proprie esigenze
-    \end{itemize}
-  \end{block}
+%%     \begin{itemize}
+%%       \item Le quattro libert\`a
+%%       \item Le quattro libert\`a
+%%       \item Le quattro libert\`a
+%%       \item Veloce risoluzione bug
+%%       \item Indipendenza da chi produce software
+%%       \item Facile interscambio di informazioni e dati fra le
+%%         varie parti
+%%       \item Adattare al meglio il programma alle proprie esigenze
+%%     \end{itemize}
+%%   \end{block}
 
 
-  \begin{block}{Un esempio}
-    Ricetta o teorema?!?!
-  \end{block}
+%%   \begin{block}{Un esempio}
+%%     Ricetta o teorema?!?!
+%%   \end{block}
 
 
-\end{frame}
+%% \end{frame}
 
 
 \end{document}
